# sawyer-robot

./: .gitignore  README.md
robot_client/: pyproject.toml
robot_client/examples/: camera.py  camera_capture.py  camera_demo.py  camera_stream_viewer.py  camera_to_head_display.py  display_logo.py  enable_robot.py  gazebo_demo.py  gripper.py  gripper_test.py  hand_camera_settings.py  hand_camera_to_head_display.py  head.py  head_demo.py  interactive_control.py  keyboard.py  keyboard_control.py  landing_detection_demo.py  lights.py  lights_demo.py  navigator_cuff_demo.py  robot_demo.py  robot_info.py  sawyer_camera_capture.py  separate_clients_demo.py
robot_client/robot_client/: __init__.py  base_client.py  camera.py  client.py  contact_sensor.py  gazebo.py  geometry.py  gripper.py  head.py  lights.py  rgbd_camera.py  robot.py  sawyer_robot.py
robot_client/robot_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
robot_client/robot_client/components/: __init__.py  arm.py  camera.py  gripper.py  lights.py
robot_client/robot_client/examples/: README.md  camera_capture.py  camera_demo.py  camera_stream_viewer.py  gazebo_demo.py  gripper_test.py  hand_camera_to_head_display.py  head_demo.py  interactive_control.py  keyboard_control.py  landing_detection_demo.py  lights_demo.py  robot_demo.py  robot_info.py  sawyer_camera_capture.py  separate_clients_demo.py
robot_client/robot_client/protocols/: __init__.py  http.py  zmq.py
robot_client/sawyer_robot/: __init__.py  geometry.py  sawyer.py  sawyer_robot.py
robot_client/sawyer_robot/components/: arm.py  (+4 more)
(+39 files in other folders)
