[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-client"
version = "1.0.0"
description = "Host-side Python client for Sawyer robot control"
requires-python = ">=3.8"
dependencies = [
    "pyzmq>=25.0.0",
    "requests>=2.25.0",
    "python-socketio>=5.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["robot_client*"]
